Docker config change