@@ -1,13 +1,18 @@
-# ---------- Build stage ----------
-FROM maven:3.9.6-eclipse-temurin-17 AS build
+
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
+
 COPY pom.xml .
 COPY src ./src
+
 RUN mvn clean package -DskipTests
 
-# ---------- Run stage ----------
-FROM eclipse-temurin:17-jdk-alpine
+
+FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
+
 COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app.jar"]
+
+ENTRYPOINT ["java","--enable-preview","-jar","app.jar"]
